Implementar la funcionalidad de cierre de sesión de usuario y gestionar la suscripción de usuario en AuthComponent

--- a/src/app/shared/components/header-nav/header-nav.component.html
+++ b/src/app/shared/components/header-nav/header-nav.component.html
@@ -80,6 +80,12 @@
           class="list-group-item list-group-item-action active"
           >Censo</a
         >
+        <a
+          href="#"
+          (click)="logout()"
+          class="list-group-item list-group-item-action"
+          >Cerrar sesión</a
+        >
       </div>
     </div>
   </mat-drawer>
