--- a/src/app/shared/components/header-nav/header-nav.component.html
+++ b/src/app/shared/components/header-nav/header-nav.component.html
@@ -3,26 +3,18 @@
     mat-icon-button
     class="ht-icon"
     aria-label="Example icon-button with menu icon"
-    (click)="drawer.toggle()"
+    (click)="toggleDrawer()"
   >
     <mat-icon>menu</mat-icon>
   </button>
   <span>H-Tec</span>
   <span class="ht-spacer"></span>
-  <button
+  <!-- <button
     mat-icon-button
     class="ht-icon favorite-icon"
-    aria-label="Example icon-button with heart icon"
-  >
+    aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
-  </button>
-  <button
-    mat-icon-button
-    class="ht-icon"
-    aria-label="Example icon-button with share icon"
-  >
-    <mat-icon>share</mat-icon>
-  </button>
+  </button> -->
 </mat-toolbar>
 
 <mat-drawer-container class="ht-container" hasBackdrop="false">
