--- a/src/app/catalogos/pages/clientes/clientes.component.html
+++ b/src/app/catalogos/pages/clientes/clientes.component.html
@@ -16,41 +16,57 @@
 </div>
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <mat-table [dataSource]="dataSource" matSort>
     <!-- clienteId Column -->
     <ng-container matColumnDef="clienteId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente ID</th>
-      <td mat-cell *matCellDef="let row; let i = index">{{ (i + 1) }}</td>
+      <mat-header-cell *matHeaderCellDef>Cliente ID</mat-header-cell>
+      <mat-cell *matCellDef="let row; let i = index">
+        <span class="mobile-label">Cliente ID:</span>
+        {{ (i + 1) }}
+      </mat-cell>
     </ng-container>
 
     <!-- Cliente Column -->
     <ng-container matColumnDef="cliente">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
-      <td mat-cell *matCellDef="let row">{{ row.cliente }}</td>
+      <mat-header-cell *matHeaderCellDef>Cliente</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Cliente:</span>
+        {{ row.cliente }}
+      </mat-cell>
     </ng-container>
 
     <!-- RFC Column -->
     <ng-container matColumnDef="rfc">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>RFC</th>
-      <td mat-cell *matCellDef="let row">{{ row.rfc }}</td>
+      <mat-header-cell *matHeaderCellDef>RFC</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">RFC:</span>
+        {{ row.rfc }}
+      </mat-cell>
     </ng-container>
 
     <!-- Telefono Column -->
     <ng-container matColumnDef="telefono">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Telefono</th>
-      <td mat-cell *matCellDef="let row">{{ row.telefono }}</td>
+      <mat-header-cell *matHeaderCellDef>Telefono</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Telefono:</span>
+        {{ row.telefono }}
+      </mat-cell>
     </ng-container>
 
     <!-- Correo Column -->
     <ng-container matColumnDef="correo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Correo</th>
-      <td mat-cell *matCellDef="let row">{{ row.correo }}</td>
+      <mat-header-cell *matHeaderCellDef>Correo</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Correo:</span>
+        {{ row.correo }}
+      </mat-cell>
     </ng-container>
 
     <!-- Acciones Column -->
     <ng-container matColumnDef="acciones">
-      <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let row">
+      <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Acciones:</span>
         <button mat-icon-button color="primary" (click)="consultar(row)">
           <mat-icon>search</mat-icon>
         </button>
@@ -60,21 +76,12 @@
         <button mat-icon-button color="warn" (click)="eliminar(row)">
           <mat-icon>delete</mat-icon>
         </button>
-      </td>
+      </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell text-center" colspan="4">
-        <h3 class="mt-4">
-          No hay clientes registrados
-        </h3>
-      </td>
-    </tr>
-  </table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+ </mat-table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
