--- a/src/app/catalogos/pages/productos/productos.component.html
+++ b/src/app/catalogos/pages/productos/productos.component.html
@@ -16,29 +16,39 @@
 </div>
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <mat-table [dataSource]="dataSource" matSort>
     <!-- Clave Column -->
     <ng-container matColumnDef="clave">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Clave producto</th>
-      <td mat-cell *matCellDef="let row;">{{ row.clave }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Clave producto</mat-header-cell>
+      <mat-cell *matCellDef="let row;">
+        <span class="mobile-label">Clave producto:</span>
+        {{ row.clave }}
+      </mat-cell>
     </ng-container>
 
     <!-- Descripción Column -->
     <ng-container matColumnDef="descripcion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</th>
-      <td mat-cell *matCellDef="let row">{{ row.descripcion }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Descripción:</span>
+        {{ row.descripcion }}
+      </mat-cell>
     </ng-container>
 
     <!-- Precio Column -->
     <ng-container matColumnDef="precio">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-      <td mat-cell *matCellDef="let row">{{ row.precio | currency:'MXN':'symbol' }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Precio</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Precio:</span>
+        {{ row.precio | currency:'MXN':'symbol' }}
+      </mat-cell>
     </ng-container>
 
     <!-- Acciones Column -->
     <ng-container matColumnDef="acciones">
-      <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let row">
+      <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Acciones:</span>
         <button mat-icon-button color="primary" (click)="consultar(row)">
           <mat-icon>search</mat-icon>
         </button>
@@ -48,11 +58,11 @@
         <button mat-icon-button color="warn" (click)="eliminar(row)">
           <mat-icon>delete</mat-icon>
         </button>
-      </td>
+      </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
@@ -62,7 +72,7 @@
         </h3>
       </td>
     </tr>
-  </table>
+  </mat-table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
