--- a/src/app/catalogos/pages/tecnicos/tecnicos.component.scss
+++ b/src/app/catalogos/pages/tecnicos/tecnicos.component.scss
@@ -11,3 +11,25 @@ table {
 td, th {
   width: 25%;
 }
+
+.mobile-label{
+  display: none;
+}
+
+@media(max-width: 600px){
+  .mobile-label{
+    width: 180px;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  mat-header-row{
+    display: none;
+  }
+
+  mat-row{
+    flex-direction: column;
+    align-items: start;
+    padding: 8px, 24px;
+  }
+}
