--- a/src/app/censo/pages/censos/censos.component.html
+++ b/src/app/censo/pages/censos/censos.component.html
@@ -18,36 +18,49 @@
 </div>
 
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" matSort>
+  <mat-table [dataSource]="dataSource" matSort>
     <!-- Censo No -->
     <ng-container matColumnDef="censoNo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Censo No.</th>
-      <td mat-cell *matCellDef="let row; let i = index">{{ i + 1 }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Censo No.</mat-header-cell>
+      <mat-cell *matCellDef="let row; let i = index">
+        <span class="mobile-label">Censo No.:</span>
+        {{ i + 1 }}
+      </mat-cell>
     </ng-container>
 
     <!-- Cliente Column -->
     <ng-container matColumnDef="cliente">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</th>
-      <td mat-cell *matCellDef="let row">{{ row.cliente.cliente }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Cliente</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Cliente:</span>
+        {{ row.cliente.cliente }}
+      </mat-cell>
     </ng-container>
 
     <!-- Equipo Column -->
     <ng-container matColumnDef="equipo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Equipo</th>
-      <td mat-cell *matCellDef="let row">{{ row.equipo?.modelo || row.impresora?.modelo }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Equipo</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Equipo:</span>
+        {{ row.equipo?.modelo || row.impresora?.modelo }}
+      </mat-cell>
     </ng-container>
     
     <!-- QR Column -->
     <ng-container matColumnDef="qr">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>QR</th>
-      <td mat-cell *matCellDef="let row">{{ row.equipo?.qr || row.impresora?.qr }}</td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header>QR</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">QR:</span>
+        {{ row.equipo?.qr || row.impresora?.qr }}
+      </mat-cell>
     </ng-container>
 
     <!-- Acciones Column -->
   
     <ng-container matColumnDef="acciones">
-      <th mat-header-cell *matHeaderCellDef>Acciones</th>
-      <td mat-cell *matCellDef="let row">
+      <mat-header-cell *matHeaderCellDef>Acciones</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <span class="mobile-label">Acciones:</span>
         <button mat-icon-button color="primary" (click)="openCensoDetalleDialog(row)">
           <mat-icon>search</mat-icon>
         </button>
@@ -57,11 +70,11 @@
         <button mat-icon-button color="warn" (click)="eliminar(row)">
           <mat-icon>delete</mat-icon>
         </button>
-      </td>
+      </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
@@ -69,7 +82,7 @@
         <h3 class="mt-4">No hay tecnicos registrados</h3>
       </td>
     </tr>
-  </table>
+  </mat-table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
 </div>
