--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
@@ -109,3 +109,18 @@
   border: 2px solid red;
 }
 
+@media(max-width: 600px){
+
+  mat-icon {
+    font-size: 12px; 
+  }
+
+  .title-resp{
+    display: inline; 
+    white-space: nowrap;
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+  }
+  
+}
