--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
@@ -109,18 +109,32 @@
   border: 2px solid red;
 }
 
-@media(max-width: 600px){
+  @media(max-width: 800px){
 
-  mat-icon {
-    font-size: 12px; 
-  }
+    mat-icon {
+      font-size: 12px; 
+    }
 
-  .title-resp{
-    display: inline; 
-    white-space: nowrap;
-    margin: 0;
-    padding: 0;
-    font-size: 10px;
+    .title-resp{
+      display: inline; 
+      white-space: nowrap;
+      margin: 0;
+      padding: 0;
+      padding-bottom: 24px;
+      font-size: 10px;
+    }
+
+    .select-container {
+      width: 75%;  
+    }
+
+    .rectangular-button {
+      border-radius: 0; 
+      margin-bottom: 60px;
+    }
+
+    .button-container{
+      display: none;
+    }
+
   }
-  
-}
