--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
@@ -120,7 +120,7 @@
       white-space: nowrap;
       margin: 0;
       padding: 0;
-      padding-bottom: 24px;
+      padding-bottom: 30px;
       font-size: 10px;
     }
 
@@ -130,11 +130,16 @@
 
     .rectangular-button {
       border-radius: 0; 
-      margin-bottom: 60px;
+      margin-bottom: 70px;
     }
 
     .button-container{
       display: none;
+    }
+
+    .btn-actions{
+      margin-top: -25px;
+      margin-bottom: -15px;
     }
 
   }
