--- a/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
+++ b/src/app/censo/dialogs/censo-dialog/censo-dialog.component.scss
@@ -131,6 +131,7 @@
     .rectangular-button {
       border-radius: 0; 
       margin-bottom: 70px;
+      display: none;
     }
 
     .button-container{
@@ -140,6 +141,7 @@
     .btn-actions{
       margin-top: -25px;
       margin-bottom: -15px;
+      display: none;
     }
 
   }
