--- a/src/app/censo/dialogs/censo-detalle-dialog/censo-detalle-dialog.component.html
+++ b/src/app/censo/dialogs/censo-detalle-dialog/censo-detalle-dialog.component.html
@@ -21,17 +21,17 @@
 
     <hr />
     <div class="col-md-12">
-      <h2 class="fw-bolder">Equipo: {{ data.equipo?.tipo || data.impresora?.tipo }}</h2>
+      <h2 class="fw-bolder">Equipo: {{ data.equipo.tipo || data.impresora.tipo }}</h2>
     </div>
     <hr />
 
     <div class="col-md-3 fw-bolder">Modelo:</div>
-    <div class="col-md-3">{{ data.equipo?.modelo || data.impresora?.modelo }}</div>
+    <div class="col-md-3">{{ data.equipo.modelo || data.impresora.modelo }}</div>
     <div class="col-md-3 fw-bolder">Marca:</div>
-    <div class="col-md-3">{{ data.equipo?.marca || data.impresora?.marca}}</div>
+    <div class="col-md-3">{{ data.equipo.marca || data.impresora.marca}}</div>
 
     <div class="col-md-3 fw-bolder">Numero de serie:</div>
-    <div class="col-md-3">{{ data.equipo?.numeroSerie || data.impresora?.numeroSerie }}</div>
+    <div class="col-md-3">{{ data.equipo.numeroSerie || data.impresora.numeroSerie }}</div>
 
     <div *ngIf="data.impresora">
       <div class="col-md-3 fw-bolder">Toner:</div>
@@ -51,7 +51,7 @@
 
 
     <div class="col-md-3 fw-bolder">QR:</div>
-    <div class="col-md-3">{{ data.equipo?.qr || data.impresora?.qr}}</div>
+    <div class="col-md-3">{{ data.equipo.qr || data.impresora.qr}}</div>
 
     <hr />
     <div class="col-md-12">
